@@ -216,12 +216,13 @@ computer.</p>
     Tianocore toolkit, and so support booting BIOS/legacy boot loaders on
     UEFI-based PCs.</li>
 
-<li><b>ALT Linux</b>&mdash;This RPM-based distribution is experimenting
-    with using rEFInd on EFI-based computers. As I write, the ALT
-    developers haven't yet nailed down booting from an optical disc (it's a
-    tricky and delicate task, especially when preparing a "hybrid" image),
-    but they're working on the problem. They have an RPM of rEFInd, but I
-    don't have a download link.</li>
+<li><b>ALT Linux</b>&mdash;This RPM-based distribution is experimenting with
+    using rEFInd on EFI-based computers. As I write, the ALT developers haven't
+    yet nailed down booting from an optical disc (it's a tricky and delicate
+    task, especially when preparing a "hybrid" image), but they're working on
+    the problem. They have an RPM of rEFInd; see <a
+    href="http://packages.altlinux.org/en/Sisyphus/srpms/refind">this page</a>
+    for details.</li>
 
 <li><b><a href="http://distro.ibiblio.org/fatdog/web/">Fat
     Dog</a></b>&mdash;This variant of Puppy Linux uses a combination of
